more validations and tasks status

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
             <!-- search input -->
             <input ng-show="tasks.length > 0" type="text" class="form-control block" placeholder="Search Tasks" ng-model="filterTask"></input>
-
             <!-- table tasks -->
             <table class="table table-bordered" ng-show="tasks.length > 0">
                 <thead>
@@ -25,13 +24,15 @@
                     <th class="txtCenter">Name</th>
                     <th class="txtCenter">Day</th>
                     <th class="txtCenter">Hour</th>
+                    <th class="txtCenter">Status</th>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="task in tasks | orderBy: 'name' | filter: {name: filterTask}" ng-class="{isSelect : task.selections}">
-                        <td><input type="checkbox" ng-model="task.selections"></input></td>
+                    <tr ng-repeat="task in tasks | orderBy: 'name' | filter: {name: filterTask}" ng-class="{isSelect : task.selections, completed : task.status==='Complete'}">
+                        <td><input type="checkbox" ng-model="task.selections" ng-hide="task.status === 'Complete'"></input></td>
                         <td>{{task.name}}</td>
                         <td>{{task.day}}</td>
                         <td>{{task.hour}}</td>
+                        <td><button class="btn" ng-click="finish(task)" ng-bind="task.status" ng-class="{'btn-warning': task.status==='Waiting','btn-success': task.status==='Complete'}"></button></td>
                     </tr>
                 </tbody>
             </table>
@@ -39,16 +40,20 @@
             <h2>Add Task</h2>
             <!-- form tasks -->
             <form>
-                <input ng-model="task.name" placeholder="Task Name"></input>
+                <input ng-model="task.name" placeholder="Task Name" ng-minlength="4"></input>
 
                 <select ng-model="task.day" ng-options="day for day in days">
                     <option value="">Choose a day</option>
                 </select>
 
                 <input ng-model="task.hour" placeholder="Task Hour ex. 15:00" ng-pattern="/^([01][0-9]|2[0-3]):[0-5][0-9]$/"></input>
-                <button ng-disabled="!task.name || !task.day || !task.hour" class="btn btn-primary btn-block" ng-click="newTask(task)">Add Task</button>
+                <select ng-model="task.status" ng-options="sts for sts in status">
+                    <option value="">Status</option>
+                </select>
+                <button ng-disabled="!task.name || !task.day || !task.hour || !task.status" class="btn btn-primary btn-block" ng-click="newTask(task)">Add Task</button>
                 <button class="btn btn-danger btn-block" ng-click="removeTasks()" ng-disabled="!isSelect(tasks)">Remove Tasks</button>
-                {{task.selections}}
+
+
             </form>
 
 
